# disco_bot

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  appspec.yml  docker-compose.yml  pyproject.toml  requirements.txt
disco_bot/: main.py
disco_bot/ai_agent/: ai_agent.py
disco_bot/kremufczan/: __init__.py  interface.py  s3_connection.py
disco_bot/msg_builder/: __init__.py  msg_builder.py
disco_bot/scheduler/: scheduler.py
docker/: Dockerfile  docker-compose.yml
infra/: .terraform.lock.hcl  main.tf  variables.tf
scripts/: install_dependencies.sh  scripts.py  start_bot.sh  stop_bot.sh
src/: main.py  papaj.txt
src/msg_builder/: msg_builder.py
src/scheduler/: __init__.py  scheduler.py
tests/integration/: conftest.py  test_s3_storage.py
tests/unit/: test_msg_builder.py  test_sanitizer.py  test_setup_storage_class.py
