[tool.poetry]
name = "disco-bot"
version = "0.1.0"
description = "tinkering with discord bot"
authors = ["wojwarych"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
python-dotenv = "^1.0.0"
boto3 = "^1.34.132"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
hypothesis = "^6.92.1"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
flake8-bugbear = "^24.4.26"
autoflake = "^2.3.1"
pylint = "^3.2.3"
mypy = "^1.10.1"
boto3-stubs = "^1.34.133"

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 88
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
]

[tool.poetry.scripts]
format = "scripts.scripts:format"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
