[project]
name = "disco-bot"
version = "0.1.0"
description = "tinkering with discord bot"
authors = [{ name = "wojwarych" }]
requires-python = "~=3.10.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "discord>=2.3.2,<3",
    "python-dotenv>=1.0.0,<2",
    "boto3>=1.34.132,<2",
    "langchain>=0.3.27",
    "langchain-mistralai>=0.2.11",
]

[project.scripts]
format = "scripts.scripts:format"

[dependency-groups]
dev = [
    "pytest>=7.4.3,<8",
    "hypothesis>=6.92.1,<7",
    "black>=24.4.2,<25",
    "isort>=5.13.2,<6",
    "flake8>=7.1.0,<8",
    "flake8-bugbear>=24.4.26,<25",
    "autoflake>=2.3.1,<3",
    "pylint>=3.2.3,<4",
    "mypy>=1.10.1,<2",
    "boto3-stubs>=1.34.133,<2",
    "pytest-cov>=5.0.0,<6",
    "docker>=7.1.0,<8",
    "pytest-mock>=3.14.0,<4",
    "yamllint>=1.37.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 88
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
]

[tool.pytest.ini_options]
addopts="--cov=disco_bot --cov-report term-missing"
